Fixed layout issue on Safari

--- a/src/scss/widget/_widget-theme.scss
+++ b/src/scss/widget/_widget-theme.scss
@@ -129,3 +129,7 @@
    white-space: nowrap;
    margin-right: 6px;
 }
+
+button.KambiWidget-outcome {
+   margin: 0!important; // Safari bug
+}
